testdata/baselines/reference/compiler/disallowUnerasableAssertion.errors.txt
disallowUnerasableAssertion.ts(4,35): error TS1005: ',' expected.
disallowUnerasableAssertion.ts(11,36): error TS1005: ',' expected.
disallowUnerasableAssertion.ts(12,36): error TS1005: ',' expected.


==== disallowUnerasableAssertion.ts (3 errors) ====
    // https://github.com/microsoft/TypeScript/issues/63527
    
    export const c0 = 1 as number / 2;
    export const c1 = 1 + 1 as number / 2;
                                      ~
!!! error TS1005: ',' expected.
    export const c2 = (1 + 1 as number) / 2;
    export const c3 = 1 + 1 as number === 2;
    export const c4 = 1 + 1 as number > 2;
    export const c5 = 1 + 1 as number >= 2;
    export const c6 = 1 + 1 as number >> 2;
    export const c7 = 1 + 1 as number << 2;
    export const c8 = 1 << 1 as number + 2;
                                       ~
!!! error TS1005: ',' expected.
    export const c9 = 1 >> 1 as number + 2;
                                       ~
!!! error TS1005: ',' expected.
    